<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.swvlmobilechallenge.ui.details.MovieDetailsViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.details.MovieDetailsFragment">

            <TextView
                android:id="@+id/tvTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/movie_tittle"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMovieTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{viewModel.movie.title}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvTittle"
                app:layout_constraintStart_toEndOf="@+id/tvTittle"
                app:layout_constraintTop_toTopOf="@+id/tvTittle"
                tools:text="tittle" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/year"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTittle" />

            <TextView
                android:id="@+id/tvMovieYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{viewModel.movie.year.toString()}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvYear"
                app:layout_constraintStart_toEndOf="@+id/tvYear"
                app:layout_constraintTop_toTopOf="@+id/tvYear"
                app:layout_constraintVertical_bias="0.0"
                tools:text="year" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/genre"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="@{viewModel.movie.genres!=null?View.VISIBLE:View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYear" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGeneres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:nestedScrollingEnabled="false"
                android:visibility="@{viewModel.movie.genres!=null?View.VISIBLE:View.GONE}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:listitem="@layout/holder_genre" />

            <TextView
                android:id="@+id/tvMovieCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cast"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="@{viewModel.movie.cast!=null?View.VISIBLE:View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvGeneres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovieCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:nestedScrollingEnabled="false"
                android:visibility="@{viewModel.movie.cast!=null?View.VISIBLE:View.GONE}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvMovieCast" />

            <TextView
                android:id="@+id/tvImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/images"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvMovieCast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tvImages"
                app:spanCount="2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>